[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UI/esc_menu.gd" type="Script" id=1]

[node name="EscMenu" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 447.0
margin_top = 212.0
margin_right = 576.0
margin_bottom = 388.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 122.0
margin_bottom = 169.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 99.0
margin_bottom = 146.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 83.0
margin_bottom = 130.0
custom_constants/separation = 0

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 83.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Resume"

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 83.0
margin_bottom = 40.0
text = "Save Game"

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 83.0
margin_bottom = 60.0
text = "Settings"

[node name="HelpButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 60.0
margin_right = 83.0
margin_bottom = 80.0
text = "Help"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 80.0
margin_right = 83.0
margin_bottom = 100.0
focus_neighbour_bottom = NodePath("../ResumeButton")
text = "Quit Game"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
